Workaround for what appears to be a GTK bug causing http://bugzilla.gnome.org/show_bug.cgi?id=498954.

git-svn-id: svn://svn.code.sf.net/p/bluefish/code/branches/bluefish_1_0@3580 7640d186-872a-4c71-b7b2-a5696852cc35